(4.2.5p176) 2009/05/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1154] mDNS registration should be done later, repeatedly and only
  if asked for. (second try for fix)
(4.2.5p175) 2009/05/12 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC7)
* [Bug 1180] ntpd won't start with more than ~1000 interfaces
* [Bug 1182] Documentation typos and missing bits.
* [Bug 1183] COM port support should extend past COM3
* [Bug 1184] ntpd is deaf when restricted to second IP on the same net
* Clean up configure.ac NTP_CACHEVERSION interface, display cache
  version when clearing.  Fixes a regression.
(4.2.5p174) 2009/05/09 Released by Harlan Stenn <stenn@ntp.org>
* Stale leapsecond file fixes from Dave Mills.
(4.2.5p173) 2009/05/08 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC6)
(4.2.5p172) 2009/05/06 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1175] Instability in PLL daemon mode.
* [Bug 1176] refclock_parse.c does not compile without PPSAPI.
(4.2.5p171) 2009/05/04 Released by Harlan Stenn <stenn@ntp.org>
* Autokey documentation cleanup from Dave Mills.
* [Bug 1171] line editing libs found without headers (Solaris 11)
* [Bug 1173] NMEA refclock fails with Solaris PPSAPI
* Fix problem linking msntp on Solaris when sntp subdir is configured
  before parent caused by different gethostent library search order.
* Do not clear config.cache when it is  empty.
(4.2.5p170) 2009/05/02 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1152] adjust PARSE to new refclock_pps logic
* Include (4.2.4p7-RC5)
* loopfilter FLL/PLL crossover cleanup from Dave Mills.
* Documentation updates from Dave Mills.
* ntp-keygen cleanup from Dave Mills.
* crypto API cleanup from Dave Mills.
* Add NTP_CACHEVERSION mechanism to ignore incompatible config.cache
* Enable gcc -Wstrict-overflow for gsoc_sntp as well
(4.2.5p169) 2009/04/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1171] Note that we never look for -lreadline by default.